--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,10 +7,11 @@ on:
 jobs:
   deploy:
     runs-on: windows-latest
+
     steps:
     - uses: actions/checkout@v2
-    - name: Set up PowerShell
-      uses: actions/setup-powershell@v1
+
     - name: Run PowerShell Script
+      shell: pwsh
       run: |
         .\intune_upload.ps1 -TenantId ${{ secrets.TENANT_ID }} -AppId ${{ secrets.APP_ID }} -AppSecret ${{ secrets.APP_SECRET }}
