--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Run PowerShell Script
       shell: pwsh
       run: |
-        .\intune_upload.ps1 -TenantId ${{ secrets.TENANT_ID }} -AppId ${{ secrets.APP_ID }} -AppSecret ${{ secrets.APP_SECRET }}
+        .\intune_upload.ps1 -TenantId ${{ secrets.TenantId }} -AppId ${{ secrets.AppId }} -AppSecret ${{ secrets.AppSecret }}
