--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Run PowerShell Script
       shell: powershell
       run: |
-
+        Import-Module IntuneWin32App
         # Application properties
         $appFilePath = ".\exported.intunewin" # Adjust the path as necessary
         $appName = "Ubuntu-Custom"
