--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,4 +30,5 @@ jobs:
     - name: Run PowerShell Script
       shell: powershell
       run: |
-        ./intune_upload.ps1
+        ./intune_upload.ps1 TenantId ${{ secrets.TenantId }} -AppId ${{ secrets.AppId }} -AppSecret ${{ secrets.AppSecret }}
+        
