--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,14 +11,26 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install Required PowerShell Modules
+    - name: Install AzureAD Module
       shell: powershell
       run: |
         Install-Module -Name AzureAD -Scope CurrentUser -Force -AllowClobber
+        
+    - name: Install Microsoft Graph Module
+      shell: pwsh
+      run: |
         Install-Module -Name Microsoft.Graph -Scope CurrentUser -Force -AllowClobber
-        Install-Module -Name IntuneWin32App -Scope CurrentUser -Force -AllowClobber
-
-    - name: Run PowerShell Script with Azure Credentials
+    - name: Install IntuneWin32App
+      shell: pwsh
+      run: |
+        Install-Module -Name IntuneWin32App -Scope CurrentUser -Force -ErrorAction Stop
+    - name: Login to Azure CLI
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+    - name: Run PowerShell Script
       shell: powershell
       run: |
-        ./intune_upload.ps1 -CredentialsJson '${{ secrets.AZURE_CREDENTIALS }}'
+        ./intune_upload.ps1 TenantId ${{ secrets.TenantId }} -AppId ${{ secrets.AppId }} -AppSecret ${{ secrets.AppSecret }}
+        
