--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Run PowerShell Script
       shell: powershell
       run: |
-        ./intune_upload.ps1 TenantId ${{ secrets.TenantId }} -AppId ${{ secrets.AppId }} -AppSecret ${{ secrets.AppSecret }}
+        ./intune_upload.ps1 TenantId ${{ secrets.TENANTID }} -AppId ${{ secrets.APPID }} -AppSecret ${{ secrets.APPSECRET }}
         
